Add more Translations

--- a/src/main/resources/translation/texts_de_CH.properties
+++ b/src/main/resources/translation/texts_de_CH.properties
@@ -1,6 +1,9 @@
+# Global
 titel=Flossrennen Management System
 subtitel=Von Handarbeit zu Klickarbeit – smarte Planung für das Mammut Flossrennen Sitter-Thur
 logodesc=Logo des Flossrennen Management Systems
+
+# Login
 logintitel=Bei Ihrem Konto anmelden
 username=E-Mail
 password=Passwort
@@ -14,3 +17,18 @@ helfer.vorname=Vorname
 helfer.nachname=Nachname
 helfer.email=E-Mail
 helfer.telefonnummer=Telefonnummer
+helfer.ressort=Ressort
+
+# Entity Benutzer
+benutzer.vorname=Vorname
+benutzer.nachname=Nachname
+benutzer.telefonnummer=Telefonnummer
+benutzer.email=E-Mail
+benutzer.passwordhash=Passwort
+benutzer.rolle=Rolle
+
+# Entity Ressort
+ressort.name=Name
+ressort.beschreibung=Beschreibung
+ressort.zustaendigkeit=Zuständigkeiten
+ressort.verantwortlich=Ressortleiter
