CheckResult implementieren, Fehlerhandling verbessern / implementieren

--- a/src/main/resources/translation/texts_de_CH.properties
+++ b/src/main/resources/translation/texts_de_CH.properties
@@ -32,3 +32,10 @@ ressort.name=Name
 ressort.beschreibung=Beschreibung
 ressort.zustaendigkeit=Zuständigkeiten
 ressort.ressortleitung=Ressortleiter
+# Notifications
+notification.success.save=Erfolgreich gespeichert
+notification.success.delete=Erfolgreich gelöscht
+notification.error.save=Fehler beim Speichern
+notification.error.delete=Fehler beim Löschen
+notification.error.missing.id=ID fehlt
+notification.error.missing.ressort=Ressort fehlt
