Style und Translation Konstanten implementiert

--- a/src/main/resources/translation/texts_de_CH.properties
+++ b/src/main/resources/translation/texts_de_CH.properties
@@ -20,18 +20,21 @@ helfer.telefonnummer=Telefonnummer
 helfer.ressort=Ressort
 
 # Entity Benutzer
+benutzer.id=Benutzer ID
 benutzer.vorname=Vorname
 benutzer.nachname=Nachname
 benutzer.telefonnummer=Telefonnummer
 benutzer.email=E-Mail
-benutzer.passwordhash=Passwort
+benutzer.passwort=Passwort
 benutzer.rolle=Rolle
 
 # Entity Ressort
+ressort.id=Ressort ID
 ressort.name=Name
 ressort.beschreibung=Beschreibung
 ressort.zustaendigkeit=Zuständigkeiten
 ressort.ressortleitung=Ressortleiter
+
 # Notifications
 notification.success.save=Erfolgreich gespeichert
 notification.success.delete=Erfolgreich gelöscht
