--- a/src/main/resources/translation/texts_de_CH.properties
+++ b/src/main/resources/translation/texts_de_CH.properties
@@ -42,3 +42,33 @@ notification.error.save=Fehler beim Speichern
 notification.error.delete=Fehler beim Löschen
 notification.error.missing.id=ID fehlt
 notification.error.missing.ressort=Ressort fehlt
+# Validation
+validation.required=Pflichtfeld
+validation.email=Ungültiges E-Mail-Format
+validation.telefonnummer=Ungültiges Telefonnummern-Format
+validation.size=Länge muss zwischen {min} und {max} Zeichen liegen
+validation.unique.email=E-Mail-Adresse bereits vergeben
+validation.unique.telefonnummer=Telefonnummer bereits vergeben
+validation.unique.name=Name bereits vergeben
+validation.id.nan=ID muss eine Zahl sein.
+# Common
+common.save=Speichern
+common.cancel=Abbrechen
+common.delete=Löschen
+common.filter=Filtern...
+# Navigation
+nav.home=Startseite
+nav.helfer=Helferverwaltung
+nav.ressort=Ressortverwaltung
+nav.benutzer=Benutzerverwaltung
+# Home View
+home.welcome=Hallo
+# Helfer View
+helfer.title=Helferverwaltung
+helfer.new=Neuer Helfer
+# Ressort View
+ressort.title=Ressortverwaltung
+ressort.new=Neues Ressort
+# Benutzer View
+benutzer.title=Benutzerverwaltung
+benutzer.new=Neuer Benutzer
