--- a/src/main/resources/translation/texts_de_CH.properties
+++ b/src/main/resources/translation/texts_de_CH.properties
@@ -34,6 +34,13 @@ ressort.name=Name
 ressort.beschreibung=Beschreibung
 ressort.zustaendigkeit=Zuständigkeiten
 ressort.ressortleitung=Ressortleiter
+# Entity LogEntry
+logevent.id=Log ID
+logevent.timestamp=Zeitpunkt
+logevent.type=Typ
+logevent.log_level=Log Level
+logevent.benutzer=Benutzer
+logevent.message=Nachricht
 
 # Notifications
 notification.success.save=Erfolgreich gespeichert
