Add LogEventView: Translation aufgeräumt

--- a/src/main/resources/translation/texts_de_CH.properties
+++ b/src/main/resources/translation/texts_de_CH.properties
@@ -1,47 +1,19 @@
-# Global
+# --- Global ---
+# Branding
 titel=Flossrennen Management System
 subtitel=Von Handarbeit zu Klickarbeit – smarte Planung für das Mammut Flossrennen Sitter-Thur
 logodesc=Logo des Flossrennen Management Systems
-
-# Login
-logintitel=Bei Ihrem Konto anmelden
-username=E-Mail
-password=Passwort
-loginbutton=Anmelden
-loginerrortitel=Fehler beim Anmelden
-loginerrormessage=Etwas ist schiefgelaufen. Bitte versuchen Sie es erneut.
-
-# Entity Helfer
-helfer.id=Helfer ID
-helfer.vorname=Vorname
-helfer.nachname=Nachname
-helfer.email=E-Mail
-helfer.telefonnummer=Telefonnummer
-helfer.ressort=Ressort
-
-# Entity Benutzer
-benutzer.id=Benutzer ID
-benutzer.vorname=Vorname
-benutzer.nachname=Nachname
-benutzer.telefonnummer=Telefonnummer
-benutzer.email=E-Mail
-benutzer.passwort=Passwort
-benutzer.rolle=Rolle
-
-# Entity Ressort
-ressort.id=Ressort ID
-ressort.name=Name
-ressort.beschreibung=Beschreibung
-ressort.zustaendigkeit=Zuständigkeiten
-ressort.ressortleitung=Ressortleiter
-# Entity LogEntry
-logevent.id=Log ID
-logevent.timestamp=Zeitpunkt
-logevent.type=Typ
-logevent.log_level=Log Level
-logevent.benutzer=Benutzer
-logevent.message=Nachricht
-
+# Navigation
+nav.home=Startseite
+nav.helfer=Helferverwaltung
+nav.ressort=Ressortverwaltung
+nav.benutzer=Benutzerverwaltung
+nav.systemprotokoll=Systemprotokoll
+# Common Actions
+common.save=Speichern
+common.cancel=Abbrechen
+common.delete=Löschen
+common.filter=Filtern...
 # Notifications
 notification.success.save=Erfolgreich gespeichert
 notification.success.delete=Erfolgreich gelöscht
@@ -58,18 +30,61 @@ validation.unique.email=E-Mail-Adresse bereits vergeben
 validation.unique.telefonnummer=Telefonnummer bereits vergeben
 validation.unique.name=Name bereits vergeben
 validation.id.nan=ID muss eine Zahl sein.
-# Common
-common.save=Speichern
-common.cancel=Abbrechen
-common.delete=Löschen
-common.filter=Filtern...
-# Navigation
-nav.home=Startseite
-nav.helfer=Helferverwaltung
-nav.ressort=Ressortverwaltung
-nav.benutzer=Benutzerverwaltung
+# --- Entities ---
+# Helfer
+helfer.id=Helfer ID
+helfer.vorname=Vorname
+helfer.nachname=Nachname
+helfer.email=E-Mail
+helfer.telefonnummer=Telefonnummer
+helfer.ressort=Ressort
+# Benutzer
+benutzer.id=Benutzer ID
+benutzer.vorname=Vorname
+benutzer.nachname=Nachname
+benutzer.telefonnummer=Telefonnummer
+benutzer.email=E-Mail
+benutzer.passwort=Passwort
+benutzer.rolle=Rolle
+# Ressort
+ressort.id=Ressort ID
+ressort.name=Name
+ressort.beschreibung=Beschreibung
+ressort.zustaendigkeit=Zuständigkeiten
+ressort.ressortleitung=Ressortleiter
+# LogEntry
+log.id=Log ID
+log.timestamp=Zeitpunkt
+log.type=Typ
+log.level=Log Level
+log.benutzer=Benutzer
+log.message=Nachricht
+# --- Log Constants ---
+# Log Levels
+log.level.info=Information
+log.level.error=Fehler
+# Log Types
+log.type.helfer.created=Helfer erstellt
+log.type.helfer.updated=Helfer bearbeitet
+log.type.helfer.deleted=Helfer gelöscht
+log.type.ressort.created=Ressort erstellt
+log.type.ressort.updated=Ressort bearbeitet
+log.type.ressort.deleted=Ressort gelöscht
+log.type.benutzer.created=Benutzer erstellt
+log.type.benutzer.updated=Benutzer bearbeitet
+log.type.benutzer.deleted=Benutzer gelöscht
+# --- Views ---
+# Login View
+logintitel=Bei Ihrem Konto anmelden
+username=E-Mail
+password=Passwort
+loginbutton=Anmelden
+loginerrortitel=Fehler beim Anmelden
+loginerrormessage=Etwas ist schiefgelaufen. Bitte versuchen Sie es erneut.
+
 # Home View
 home.welcome=Hallo
+
 # Helfer View
 helfer.title=Helferverwaltung
 helfer.new=Neuer Helfer
@@ -79,3 +94,11 @@ ressort.new=Neues Ressort
 # Benutzer View
 benutzer.title=Benutzerverwaltung
 benutzer.new=Neuer Benutzer
+# Systemprotokoll View
+systemprotokoll.title=Systemprotokoll
+systemprotokoll.filter.type=Typ filtern
+systemprotokoll.filter.level=Level filtern
+systemprotokoll.filter.user=Benutzer filtern
+systemprotokoll.filter.from=Von
+systemprotokoll.filter.to=Bis
+systemprotokoll.filter.placeholder=Alle
