Refactor DataAccess Classes

--- a/src/main/resources/translation/texts_de_CH.properties
+++ b/src/main/resources/translation/texts_de_CH.properties
@@ -18,6 +18,7 @@ common.filter=Filtern...
 notification.success.save=Erfolgreich gespeichert
 notification.success.delete=Erfolgreich gelöscht
 notification.error.save=Fehler beim Speichern
+notification.error.nopassword=Das Passwort konnte nicht verarbeitet werden
 notification.error.delete=Fehler beim Löschen
 notification.error.missing.id=ID fehlt
 notification.error.missing.ressort=Ressort fehlt
