--- a/src/main/resources/translation/texts_de_CH.properties
+++ b/src/main/resources/translation/texts_de_CH.properties
@@ -22,6 +22,11 @@ notification.error.nopassword=Das Passwort konnte nicht verarbeitet werden
 notification.error.delete=Fehler beim Löschen
 notification.error.missing.id=ID fehlt
 notification.error.missing.ressort=Ressort fehlt
+# Logging Messages
+log.delete.notfound=Löschen fehlgeschlagen: %s mit ID %d nicht gefunden.
+log.save.nopassword=Speichern fehlgeschlagen: Passwort-Hash fehlt für Benutzer %s
+exception.notfound=%s nicht gefunden
+log.new=NEU
 # Validation
 validation.required=Pflichtfeld
 validation.email=Ungültiges E-Mail-Format
@@ -74,6 +79,7 @@ log.type.ressort.deleted=Ressort gelöscht
 log.type.benutzer.created=Benutzer erstellt
 log.type.benutzer.updated=Benutzer bearbeitet
 log.type.benutzer.deleted=Benutzer gelöscht
+log.type.apperror=Systemfehler
 # --- Views ---
 # Login View
 logintitel=Bei Ihrem Konto anmelden
