--- a/src/main/resources/translation/texts_de_CH.properties
+++ b/src/main/resources/translation/texts_de_CH.properties
@@ -27,6 +27,9 @@ log.delete.notfound=Löschen fehlgeschlagen: %s mit ID %d nicht gefunden.
 log.save.nopassword=Speichern fehlgeschlagen: Passwort-Hash fehlt für Benutzer %s
 exception.notfound=%s nicht gefunden
 log.new=NEU
+log.header.created=Neuer %s erstellt:
+log.header.updated=%s %d bearbeitet:
+log.header.deleted=%s %d gelöscht:
 # Validation
 validation.required=Pflichtfeld
 validation.email=Ungültiges E-Mail-Format
