--- a/src/main/resources/translation/texts.properties
+++ b/src/main/resources/translation/texts.properties
@@ -92,7 +92,7 @@ loginbutton=Anmelden
 loginerrortitel=Fehler beim Anmelden
 loginerrormessage=Etwas ist schiefgelaufen. Bitte versuchen Sie es erneut.
 # Home View
-home.welcome=Hallo
+home.welcome=Herzlich Willkommen!
 # Helfer View
 helfer.title=Helferverwaltung
 helfer.new=Neuer Helfer
