Add EinsatzView: EinsatzStatus und Translations aktualisiert

--- a/src/main/resources/translation/texts_de.properties
+++ b/src/main/resources/translation/texts_de.properties
@@ -8,6 +8,7 @@ nav.home=Startseite
 nav.helfer=Helferverwaltung
 nav.ressort=Ressortverwaltung
 nav.benutzer=Benutzerverwaltung
+nav.einsatz=Einsatzverwaltung
 nav.systemprotokoll=Systemprotokoll
 # Common Actions
 common.save=Speichern
@@ -38,6 +39,7 @@ validation.size=Länge muss zwischen {min} und {max} Zeichen liegen
 validation.unique.email=E-Mail-Adresse bereits vergeben
 validation.unique.telefonnummer=Telefonnummer bereits vergeben
 validation.unique.name=Name bereits vergeben
+validation.min=Wert muss mindestens {value} sein
 validation.id.nan=ID muss eine Zahl sein.
 # --- Entities ---
 # Helfer
@@ -61,6 +63,20 @@ ressort.name=Name
 ressort.beschreibung=Beschreibung
 ressort.zustaendigkeit=Zuständigkeiten
 ressort.ressortleitung=Ressortleiter
+# Einsatz
+einsatz.id=Einsatz ID
+einsatz.name=Name
+einsatz.beschreibung=Beschreibung
+einsatz.startzeit=Startzeit
+einsatz.endzeit=Endzeit
+einsatz.ort=Ort
+einsatz.mittel=Mittel
+einsatz.benoetigte.helfer=Benötigte Helfer
+einsatz.status=Status
+einsatz.status.erstellt=Erstellt
+einsatz.status.offen=Offen
+einsatz.status.abgeschlossen=Abgeschlossen
+einsatz.ressort=Ressort
 # LogEntry
 log.id=Log ID
 log.timestamp=Zeitpunkt
@@ -82,6 +98,9 @@ log.type.ressort.deleted=Ressort gelöscht
 log.type.benutzer.created=Benutzer erstellt
 log.type.benutzer.updated=Benutzer bearbeitet
 log.type.benutzer.deleted=Benutzer gelöscht
+log.type.einsatz.created=Einsatz erstellt
+log.type.einsatz.updated=Einsatz bearbeitet
+log.type.einsatz.deleted=Einsatz gelöscht
 log.type.apperror=Systemfehler
 # --- Views ---
 # Login View
@@ -102,6 +121,9 @@ ressort.new=Neues Ressort
 # Benutzer View
 benutzer.title=Benutzerverwaltung
 benutzer.new=Neuer Benutzer
+# Einsatz View
+einsatz.title=Einsatzplanung
+einsatz.new=Neuer Einsatz
 # Systemprotokoll View
 systemprotokoll.title=Systemprotokoll
 systemprotokoll.filter.type=Typ filtern
