Feedback an den User erweitert

--- a/src/main/resources/translation/texts_de.properties
+++ b/src/main/resources/translation/texts_de.properties
@@ -41,6 +41,7 @@ validation.unique.telefonnummer=Telefonnummer bereits vergeben
 validation.unique.name=Name bereits vergeben
 validation.min=Wert muss mindestens {value} sein
 validation.id.nan=ID muss eine Zahl sein.
+validation.einsatz.start.before.end=Die Startzeit muss vor der Endzeit liegen.
 # --- Entities ---
 # Helfer
 helfer.id=Helfer ID
