Helfer zu Einsätzen zuweisbar machen: View hinzugefügt

--- a/src/main/resources/translation/texts_de.properties
+++ b/src/main/resources/translation/texts_de.properties
@@ -9,6 +9,7 @@ nav.helfer=Helferverwaltung
 nav.ressort=Ressortverwaltung
 nav.benutzer=Benutzerverwaltung
 nav.einsatz=Einsatzverwaltung
+nav.einsatz.zuweisung=Helfer zuweisen
 nav.systemprotokoll=Systemprotokoll
 # Common Actions
 common.save=Speichern
@@ -42,6 +43,7 @@ validation.unique.name=Name bereits vergeben
 validation.min=Wert muss mindestens {value} sein
 validation.id.nan=ID muss eine Zahl sein.
 validation.einsatz.start.before.end=Die Startzeit muss vor der Endzeit liegen.
+validation.einsatz.helfer.overlap=Helfer %s ist bereits für einen anderen Einsatz in diesem Zeitraum eingeteilt.
 # --- Entities ---
 # Helfer
 helfer.id=Helfer ID
@@ -125,6 +127,15 @@ benutzer.new=Neuer Benutzer
 # Einsatz View
 einsatz.title=Einsatzplanung
 einsatz.new=Neuer Einsatz
+# Einsatz Zuweisung View
+einsatz.zuweisung.title=Helfer zuweisen
+einsatz.zuweisung.einsatz=Einsatz auswählen
+einsatz.zuweisung.helfer=Helfer zuweisen
+einsatz.zuweisung.zuegewiesen=Zugewiesene Helfer
+einsatz.zuweisung.verfuegbar=Verfügbare Helfer
+einsatz.zuweisung.button.assign=Zuweisen ->
+einsatz.zuweisung.button.unassign=<- Entfernen
+einsatz.zuweisung.missing.helfer=Fehlende Helfer
 # Systemprotokoll View
 systemprotokoll.title=Systemprotokoll
 systemprotokoll.filter.type=Typ filtern
