--- a/src/main/resources/translation/texts.properties
+++ b/src/main/resources/translation/texts.properties
@@ -8,6 +8,8 @@ nav.home=Startseite
 nav.helfer=Helferverwaltung
 nav.ressort=Ressortverwaltung
 nav.benutzer=Benutzerverwaltung
+nav.einsatz=Einsatzverwaltung
+nav.einsatz.zuweisung=Helfer zuweisen
 nav.systemprotokoll=Systemprotokoll
 # Common Actions
 common.save=Speichern
@@ -38,6 +40,7 @@ validation.size=Länge muss zwischen {min} und {max} Zeichen liegen
 validation.unique.email=E-Mail-Adresse bereits vergeben
 validation.unique.telefonnummer=Telefonnummer bereits vergeben
 validation.unique.name=Name bereits vergeben
+validation.min=Wert muss mindestens {value} sein
 validation.id.nan=ID muss eine Zahl sein.
 # --- Entities ---
 # Helfer
@@ -61,6 +64,20 @@ ressort.name=Name
 ressort.beschreibung=Beschreibung
 ressort.zustaendigkeit=Zuständigkeiten
 ressort.ressortleitung=Ressortleiter
+# Einsatz
+einsatz.id=Einsatz ID
+einsatz.name=Name
+einsatz.beschreibung=Beschreibung
+einsatz.startzeit=Startzeit
+einsatz.endzeit=Endzeit
+einsatz.ort=Ort
+einsatz.mittel=Mittel
+einsatz.benoetigte.helfer=Benötigte Helfer
+einsatz.status=Status
+einsatz.status.erstellt=Erstellt
+einsatz.status.offen=Offen
+einsatz.status.abgeschlossen=Abgeschlossen
+einsatz.ressort=Ressort
 # LogEntry
 log.id=Log ID
 log.timestamp=Zeitpunkt
@@ -82,6 +99,9 @@ log.type.ressort.deleted=Ressort gelöscht
 log.type.benutzer.created=Benutzer erstellt
 log.type.benutzer.updated=Benutzer bearbeitet
 log.type.benutzer.deleted=Benutzer gelöscht
+log.type.einsatz.created=Einsatz erstellt
+log.type.einsatz.updated=Einsatz bearbeitet
+log.type.einsatz.deleted=Einsatz gelöscht
 log.type.apperror=Systemfehler
 # --- Views ---
 # Login View
@@ -92,7 +112,7 @@ loginbutton=Anmelden
 loginerrortitel=Fehler beim Anmelden
 loginerrormessage=Etwas ist schiefgelaufen. Bitte versuchen Sie es erneut.
 # Home View
-home.welcome=Herzlich Willkommen!
+home.welcome=Herzlich Willkommen in der Flossrennen Management System-Anwendung!
 # Helfer View
 helfer.title=Helferverwaltung
 helfer.new=Neuer Helfer
@@ -102,6 +122,18 @@ ressort.new=Neues Ressort
 # Benutzer View
 benutzer.title=Benutzerverwaltung
 benutzer.new=Neuer Benutzer
+# Einsatz View
+einsatz.title=Einsatzplanung
+einsatz.new=Neuer Einsatz
+# Einsatz Zuweisung View
+einsatz.zuweisung.title=Helfer zuweisen
+einsatz.zuweisung.einsatz=Einsatz auswählen
+einsatz.zuweisung.helfer=Helfer zuweisen
+einsatz.zuweisung.zuegewiesen=Zugewiesene Helfer
+einsatz.zuweisung.verfuegbar=Verfügbare Helfer
+einsatz.zuweisung.button.assign=Zuweisen ->
+einsatz.zuweisung.button.unassign=<- Entfernen
+einsatz.zuweisung.missing.helfer=Fehlende Helfer
 # Systemprotokoll View
 systemprotokoll.title=Systemprotokoll
 systemprotokoll.filter.type=Typ filtern
