--- a/src/main/resources/translation/texts.properties
+++ b/src/main/resources/translation/texts.properties
@@ -42,6 +42,9 @@ validation.unique.telefonnummer=Telefonnummer bereits vergeben
 validation.unique.name=Name bereits vergeben
 validation.min=Wert muss mindestens {value} sein
 validation.id.nan=ID muss eine Zahl sein.
+validation.einsatz.start.before.end=Die Startzeit muss vor der Endzeit liegen.
+validation.einsatz.helfer.overlap=Helfer %s ist bereits für einen anderen Einsatz in diesem Zeitraum eingeteilt.
+validation.einsatz.full=Dieser Einsatz ist bereits abgeschlossen oder voll besetzt.
 # --- Entities ---
 # Helfer
 helfer.id=Helfer ID
