--- a/src/main/resources/translation/texts_de.properties
+++ b/src/main/resources/translation/texts_de.properties
@@ -112,6 +112,7 @@ logintitel=Bei Ihrem Konto anmelden
 username=E-Mail
 password=Passwort
 loginbutton=Anmelden
+logoutbutton=Abmelden
 loginerrortitel=Fehler beim Anmelden
 loginerrormessage=Etwas ist schiefgelaufen. Bitte versuchen Sie es erneut.
 # Home View
